--- a/KingPim.Web/ClientApp/src/app/app.component.html
+++ b/KingPim.Web/ClientApp/src/app/app.component.html
@@ -1,10 +1,13 @@
-<div class='container-fluid'>
-  <div class='row'>
-    <div class='col-sm-3'>
-      <app-nav-menu></app-nav-menu>
+<app-nav-menu></app-nav-menu>
+<div class='container'>
+  <div class="row">
+    <div class="col-3 bg-primary">
     </div>
-    <div class='col-sm-9 body-content'>
+    <div class="col-6">
       <router-outlet></router-outlet>
     </div>
+    <div class="col-3 bg-secondary"></div>
   </div>
-</div>
+    </div>
+      
+
