--- a/KingPim.Web/ClientApp/src/app/home/home.component.html
+++ b/KingPim.Web/ClientApp/src/app/home/home.component.html
@@ -1,5 +1,57 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
 
-<app-main-catalog [categoryData]='categoryData'></app-main-catalog>
+<div class='container-fluid' id="main_container">
+  <div class="row">
+    <div class="col-md-3">
+      <app-main-catalog [categoryData]='categoryData'></app-main-catalog>
+      <app-main-catalog [subcategoryData]='subcategoryData'></app-main-catalog>
+    </div>
+    <div class="col-md-6">
+      <h1>Main Catalog</h1><br />
+
+      <table class="table table-dark table-striped">
+        <thead>
+          <tr>
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>john@example.com</td>
+          </tr>
+          <tr>
+            <td>Mary</td>
+            <td>Moe</td>
+            <td>mary@example.com</td>
+          </tr>
+          <tr>
+            <td>July</td>
+            <td>Dooley</td>
+            <td>july@example.com</td>
+          </tr>
+        </tbody>
+      </table>
+
+
+    </div>
+    <div class="col-md-3">
+      Information
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
