--- a/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-sm navbar-light">
   <a class="navbar-brand" [routerLink]='["/"]'>KingPim</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,11 +10,6 @@
           Home
         </a>
       </li>.
-      <li [routerLinkActive]='["link-active"]'>
-        <a [routerLink]='["/counter"]' (click)='collapse()'>
-          Counter
-        </a>
-      </li> .
       <li [routerLinkActive]='["link-active"]'>
         <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
           Fetch data
