product showing and some design made

--- a/KingPim.Web/ClientApp/src/app/main-catalog/main-catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/main-catalog/main-catalog.component.html
@@ -1,10 +1,10 @@
 
 <button href="#" class="btn btn-outline-primary" id="create_new_category">Create new category</button><br />
-<ul id="list_formatter" *ngFor="let categoryInfo of categoryData ">
+<ul class="list_formatter" *ngFor="let categoryInfo of categoryData ">
   <li>{{ categoryInfo.name }}</li>
 </ul><br />
 
-<ul id="list_formatter" *ngFor="let subcategoryInfo of subcategoryData ">
+<ul class="list_formatter" *ngFor="let subcategoryInfo of subcategoryData ">
   <li>{{ subcategoryInfo.name }}</li>
 </ul>
 
