--- a/KingPim.Web/ClientApp/src/app/home/home.component.html
+++ b/KingPim.Web/ClientApp/src/app/home/home.component.html
@@ -7,33 +7,8 @@
     </div>
     <div class="col-md-6">
       <h1>Main Catalog</h1><br />
-
-      <table class="table table-dark table-striped">
-        <thead>
-          <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Email</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>john@example.com</td>
-          </tr>
-          <tr>
-            <td>Mary</td>
-            <td>Moe</td>
-            <td>mary@example.com</td>
-          </tr>
-          <tr>
-            <td>July</td>
-            <td>Dooley</td>
-            <td>july@example.com</td>
-          </tr>
-        </tbody>
-      </table>
+      <app-show-all-products [productData]='productData'></app-show-all-products>
+     
 
 
     </div>
