--- a/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,20 +1,27 @@
-<nav class="navbar navbar-expand-sm navbar-light">
-  <a class="navbar-brand" [routerLink]='["/"]'>KingPim</a>
+<nav class="navbar navbar-expand-sm">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-        <a [routerLink]='["/"]' (click)='collapse()'>
-          Home
-        </a>
-      </li>.
-      <li [routerLinkActive]='["link-active"]'>
-        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
-          Fetch data
+    <ul class="navbar-nav">
+      <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+        <a class="nav-link" [routerLink]='["/"]' (click)='collapse()'>
+          <i class="fa fa-home fa-fw"></i>Home
         </a>
       </li>
+      <li class="nav-item" [routerLinkActive]='["link-active"]'>
+        <a class="nav-link" [routerLink]='["/assets-library"]' (click)='collapse()'>
+          <i class="fa fa-book fa-fw"></i>Media-Library
+        </a>
+      </li>
+      <li class="nav-item" [routerLinkActive]='["link-active"]'>
+        <a class="nav-link" [routerLink]='["/tools"]' (click)='collapse()'>
+          <i class="fa fa-cog fa-fw"></i>Tools
+        </a>
+      <li class="nav-item" [routerLinkActive]='["link-active"]'>
+        <a class="nav-link" [routerLink]='["/accounts"]' (click)='collapse()'>
+          <i class="fa fa-user"></i> Accounts
+        </a>
     </ul>
   </div>
 </nav>
