--- a/KingPim.Web/ClientApp/src/app/show-all-products/show-all-products.component.html
+++ b/KingPim.Web/ClientApp/src/app/show-all-products/show-all-products.component.html
@@ -1,7 +1,8 @@
-<table class="table table-bordered">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Id</th>
+      <th>Category</th>
       <th>SubCategory</th>
       <th>Name</th>
       <th>DateCreated</th>
@@ -14,13 +15,18 @@
   <tbody>
     <tr *ngFor="let productInfo of productData ">
       <td>{{ productInfo.id }}</td>
+      <td>{{ productInfo.categoryId }}</td>
       <td>{{ productInfo.subCategoryId }}</td>
       <td>{{ productInfo.name }}</td>
-      <td>{{ productInfo.dateCreated }}</td>
-      <td>{{ productInfo.dateUpdated }}</td>
+      <td>{{ productInfo.dateCreated | date:'yyyy-MM-dd HH:mm' }}</td>
+      <td>{{ productInfo.dateUpdated | date:'yyyy-MM-dd HH:mm' }}</td>
       <td>{{ productInfo.editedBy }}</td>
       <td>{{ productInfo.version }}</td>
       <td>{{ productInfo.publishedStatus }}</td>
+      <td>
+        <a href="#" (click)="editRecord(this)">Edit</a>
+        <a href="#" (click)="deleteRecord(this)">Delete</a>
+      </td>
     </tr>
   </tbody>
 </table>
