need the put function to work, something with backend

--- a/KingPim.Web/ClientApp/src/app/show-all-products/show-all-products.component.html
+++ b/KingPim.Web/ClientApp/src/app/show-all-products/show-all-products.component.html
@@ -24,8 +24,8 @@
       <td>{{ productInfo.version }}</td>
       <td>{{ productInfo.publishedStatus }}</td>
       <td>
-        <a href="#" (click)="editRecord(this)">Edit</a>
-        <a href="#" (click)="deleteRecord(this)">Delete</a>
+        <a href="#" (click)="editRecord(productInfo)">Edit</a>
+        <a href="#" (click)="deleteRecord(productInfo)">Delete</a>
       </td>
     </tr>
   </tbody>
