--- a/KingPim.Web/ClientApp/src/app/add-edit-product/add-edit-product.component.html
+++ b/KingPim.Web/ClientApp/src/app/add-edit-product/add-edit-product.component.html
@@ -8,11 +8,11 @@
     </div>
     <div class="form-group">
       <label for="category"></label>
-      <select>
-        <option *ngFor="let categoryInfo of categoryData ">
+      <!--<select>
+        <option *ngFor="let categoryInfo of categoryData " [(ngModel)]="productInfo." name="category" >
           {{ categoryInfo.name }}
         </option>
-      </select>
+      </select>-->
     </div>
     <div class="form-group">
       <label for="subcategory"></label>
