--- a/KingPim.Web/ClientApp/src/app/home/home.component.html
+++ b/KingPim.Web/ClientApp/src/app/home/home.component.html
@@ -2,8 +2,7 @@
 <div class='container-fluid' id="main_container">
   <div class="row">
     <div class="col-md-2">
-      <app-main-catalog [categoryData]='categoryData'></app-main-catalog>
-      <app-main-catalog [subcategoryData]='subcategoryData'></app-main-catalog>
+      <app-main-catalog [categoryData]='categoryData' [subcategoryData]='subcategoryData'></app-main-catalog>
     </div>
     <div class="col-md-9">
       <h1>Catalog / Products</h1><br />
