--- a/KingPim.Web/ClientApp/src/app/add-edit-product/add-edit-product.component.html
+++ b/KingPim.Web/ClientApp/src/app/add-edit-product/add-edit-product.component.html
@@ -3,22 +3,27 @@
   <h2 *ngIf="productInfo && productInfo.id !== undefined">Update record (ID: )</h2>
   <form>
     <div class="form-group">
+      <label for="id-input">id</label>
+      <input type="hidden" id="id-input" [(ngModel)]="productInfo.id" name="id" class="form-control" />
+    </div>
+    <div class="form-group">
       <label for="name-input">Product Name</label>
       <input type="text" id="name-input" [(ngModel)]="productInfo.name" name="name" class="form-control" />
     </div>
     <div class="form-group">
       <label for="category"></label>
       <!--<select>
-        <option *ngFor="let categoryInfo of categoryData " [(ngModel)]="productInfo." name="category" >
-          {{ categoryInfo.name }}
-        </option>
-      </select>-->
+      <option *ngFor="let categoryInfo of categoryData " [(ngModel)]="productInfo." name="category" >
+        {{ categoryInfo.name }}
+      </option>
+    </select>-->
     </div>
     <div class="form-group">
       <label for="subcategory"></label>
       <select>
         <option *ngFor="let subcategoryInfo of subcategoryData ">
-          {{ subcategoryInfo.name }}
+          <!--[(ngModel)]="productData.subcategoryId" name="subcategory"-->
+          {{ subcategoryInfo.id }}
         </option>
       </select>
     </div>
