--- a/KingPim.Web/ClientApp/src/app/home/home.component.html
+++ b/KingPim.Web/ClientApp/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <div class="col-md-9">
       <h1>Catalog / Products</h1><br />
       <app-add-edit-product (productCreated)="createOrUpdateProduct($event)" [productInfo]="currentProduct" [productData]="productData" [categoryData]="categoryData" [subcategoryData]="subcategoryData"></app-add-edit-product>
-      <app-show-all-products [productData]='productData' (editClicked)="editClicked($event)" (newClicked)="newClicked()" (recordDeleted)="deleteClicked($event)"></app-show-all-products>
+      <app-show-all-products [productData]='productData' [productInfo]="currentProduct" (editClicked)="editClicked($event)" (newClicked)="newClicked()" (recordDeleted)="deleteClicked($event)"></app-show-all-products>
     </div>
     <div class="col-md-1">
       Information
