--- a/KingPim.Web/ClientApp/src/app/add-edit-product/add-edit-product.component.html
+++ b/KingPim.Web/ClientApp/src/app/add-edit-product/add-edit-product.component.html
@@ -12,17 +12,17 @@
     </div>
     <div class="form-group">
       <label for="category"></label>
-      <!--<select>
-      <option *ngFor="let categoryInfo of categoryData " [(ngModel)]="productInfo." name="category" >
+      <select>
+      <option *ngFor="let categoryInfo of categoryData " name="category" >
         {{ categoryInfo.name }}
       </option>
-    </select>-->
+    </select>
     </div>
     <div class="form-group">
       <label for="subcategory"></label>
       <select>
         <option *ngFor="let subcategoryInfo of subcategoryData ">
-          <!--[(ngModel)]="productData.subcategoryId" name="subcategory"-->
+          [(ngModel)]="productData.subcategoryId" name="subcategory"
           {{ subcategoryInfo.id }}
         </option>
       </select>
