--- a/KingPim.Web/ClientApp/src/styles.scss
+++ b/KingPim.Web/ClientApp/src/styles.scss
@@ -4,6 +4,9 @@ body {
   background-color: whitesmoke !important;
   font-family: 'Niramit', sans-serif!important;
 }
+a {
+  cursor: pointer!important;
+}
 #main_container {
   margin-top: 50px;
 }
@@ -55,4 +58,28 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.Absolute-Center.is-Responsive {
+  width: 50%;
+  height: 50%;
+  min-width: 200px;
+  max-width: 400px;
+  padding: 40px;
+}
+
+#logo-container {
+  margin: auto;
+  margin-bottom: 10px;
+  width: 200px;
+  height: 30px;
+  background-image: url('http://placehold.it/200x30/000000/ffffff/&text=BRAND+LOGO');
 }
