--- a/KingPim.Web/ClientApp/src/app/app.component.html
+++ b/KingPim.Web/ClientApp/src/app/app.component.html
@@ -1,9 +1,8 @@
-
-
-
+<!-- nav -->
+<app-nav-menu></app-nav-menu>
 <!-- main app container -->
-        <alert></alert>
-        <router-outlet></router-outlet>
+<alert></alert>
+<router-outlet></router-outlet>
 
 
 
