--- a/KingPim.Web/ClientApp/src/app/home/home.component.html
+++ b/KingPim.Web/ClientApp/src/app/home/home.component.html
@@ -1,9 +1,4 @@
-
-
-<h1>User: {{currentUser.firstName}}!</h1>
-<ul>
-  <li *ngFor="let user of users">
-    {{user.username}} ({{user.firstName}} {{user.lastName}})
-    - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
-  </li>
-</ul>
+<!-- nav -->
+<app-nav-menu></app-nav-menu>
+<h1>Startpage</h1>
+Starting app route from here, and Navbar
