--- a/KingPim.Web/ClientApp/src/app/accounts/accounts.component.html
+++ b/KingPim.Web/ClientApp/src/app/accounts/accounts.component.html
@@ -1,3 +1,10 @@
 <p>
   accounts works!
 </p>
+<h1>User: {{currentUser.firstName}}!</h1>
+<ul>
+  <li *ngFor="let user of users">
+    {{user.username}} ({{user.firstName}} {{user.lastName}})
+    - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
+  </li>
+</ul>
