layout route fungerar

--- a/KingPim.Web/ClientApp/src/app/_pages/show-all-products/show-all-products.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/show-all-products/show-all-products.component.html
@@ -22,8 +22,8 @@
       <td>{{ productInfo.version }}</td>
       <td>{{ productInfo.publishedStatus }}</td>
       <td>
-        <a href="#" (click)="editRecord(productInfo)">Edit</a>
-        <a href="#" (click)="deleteRecord(productInfo)">Delete</a>
+        <a (click)="editRecord(productInfo)">Edit</a>
+        <a (click)="deleteRecord(productInfo)">Delete</a>
       </td>
     </tr>
   </tbody>
