--- a/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
@@ -4,11 +4,11 @@
   <form>
     <div class="form-group">
       <label for="id-input">id</label>
-      <input type="hidden" id="id-input" [(ngModel)]="productInfo.id" name="id" class="form-control" />
+      <input type="hidden" id="id-input" [(ngModel)]="productInfo.id" [ngModelOptions]="{standalone: true}" class="form-control" />
     </div>
     <div class="form-group">
       <label for="name-input">Product Name</label>
-      <input type="text" id="name-input" [(ngModel)]="productInfo.name" name="name" class="form-control" />
+      <input type="text" id="name-input" [(ngModel)]="productInfo.name" [ngModelOptions]="{standalone: true}" class="form-control" />
     </div>
     <div class="form-group">
       <label for="category"></label>
