--- a/KingPim.Web/ClientApp/src/app/_pages/register/register.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/register/register.component.html
@@ -1,4 +1,5 @@
-﻿<h2>Register</h2>
+<h4>Make new Account</h4><br />
+<!--These should be in a dropdownlist in account menu selection and based on roles-->
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="firstName">First Name</label>
