--- a/KingPim.Web/ClientApp/src/styles.scss
+++ b/KingPim.Web/ClientApp/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background-color: whitesmoke !important;
-  font-family: 'Niramit', sans-serif!important;
+  background-color: white !important;
+  font-family: 'Niramit', sans-serif !important;
+  
 }
 a {
   cursor: pointer!important;
@@ -74,12 +75,6 @@ a {
   min-width: 200px;
   max-width: 400px;
   padding: 40px;
+ 
 }
 
-#logo-container {
-  margin: auto;
-  margin-bottom: 10px;
-  width: 200px;
-  height: 30px;
-  background-image: url('http://placehold.it/200x30/000000/ffffff/&text=BRAND+LOGO');
-}
