--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
@@ -1,7 +1,7 @@
 <div class='container-fluid' id="main_container">
   <div class="row">
     <div class="col-md-2">
-      <app-main-catalog [categoryData]='categoryData' [subcategoryData]='subcategoryData'  [categoryInfo]="currentCategory" [subcategoryInfo]="currentSubCategory" (recordDeleted)="deleteCategoryClicked($event)"></app-main-catalog>
+      <app-main-catalog></app-main-catalog>
     </div>
     <div class="col-md-8">
       <h1>Catalog / Products</h1><br />
