--- a/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
@@ -2,29 +2,29 @@
   <h2 *ngIf="!productInfo || productInfo.id === undefined">Add record</h2>
   <h2 *ngIf="productInfo && productInfo.id !== undefined">Update record (ID: )</h2>
   <form>
-    <div class="form-group">
+    <!--<div class="form-group">
       <input type="hidden" id="id-input" [(ngModel)]="productInfo.id" [ngModelOptions]="{standalone: true}" class="form-control" />
-    </div>
+    </div>-->
     <div class="form-group">
       <label for="name-input">Product Name</label>
-      <input type="text" id="name-input" [(ngModel)]="productInfo.name" [ngModelOptions]="{standalone: true}" class="form-control" />
+      <input type="text" id="name-input" [(ngModel)]="productInfo.productName" [ngModelOptions]="{standalone: true}" class="form-control" />
     </div>
-    <div class="form-group">
+    <!--<div class="form-group">
       <label for="category-id">Category</label><br />
       <select>
-      <option *ngFor="let categoryInfo of categoryData " id="category-id" >
-        {{ categoryInfo.name }}
-      </option>
+        <option *ngFor="let categoryInfo of categoryData " id="category-id" [(ngModel)]="productInfo.subCategory.subcategoryName" [ngModelOptions]="{standalone: true}">
+          {{ subcategoryInfo.name}}
+        </option>
     </select>
-    </div>
-    <div class="form-group">
+    </div>-->
+    <!--<div class="form-group">
       <label for="subcategory-id">Sub Category</label><br />
       <select>
         <option *ngFor="let subcategoryInfo of subcategoryData " id="subcategory-id">
           {{ subcategoryInfo.name }}
         </option>
       </select>
-    </div>
+    </div>-->
 
     <button type="button" class="btn btn-primary" (click)="addOrUpdateProductRecord($event);">{{buttonText}}</button>
 
