--- a/KingPim.Web/ClientApp/src/app/_pages/show-all-products/show-all-products.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/show-all-products/show-all-products.component.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th>Id</th>
-      <th>SubCategory</th>
+      <!--<th>SubCategory</th>-->
       <th>Name</th>
       <th>DateCreated</th>
       <th>DateUpdated</th>
@@ -15,7 +15,7 @@
   <tbody>
     <tr *ngFor="let productInfo of productData ">
       <td>{{ productInfo.productID }}</td>
-      <td>{{ productInfo.subCategory.subcategoryName}}</td>
+      <!--<td>{{ productInfo.subCategory.subcategoryName}}</td>-->
       <td>{{ productInfo.productName }}</td>
       <td>{{ productInfo.dateCreated | date:'d/M/y, h:mm a' }}</td>
       <td>{{ productInfo.dateUpdated | date:'d/M/y, h:mm a' }}</td>
