--- a/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
@@ -1,10 +1,10 @@
 <div>
-  <h2 *ngIf="!productInfo || productInfo.id === undefined">Add record</h2>
-  <h2 *ngIf="productInfo && productInfo.id !== undefined">Update record (ID: )</h2>
+  <h2 *ngIf="!productInfo || productInfo.productID === undefined">Add record</h2>
+  <h2 *ngIf="productInfo && productInfo.productID !== undefined">Update record (Name: {{productInfo.productName}} )</h2>
   <form>
-    <!--<div class="form-group">
-      <input type="hidden" id="id-input" [(ngModel)]="productInfo.id" [ngModelOptions]="{standalone: true}" class="form-control" />
-    </div>-->
+    <div class="form-group">
+      <input type="hidden" id="id-input" [(ngModel)]="productInfo.productID" [ngModelOptions]="{standalone: true}" class="form-control" />
+    </div>
     <div class="form-group">
       <label for="name-input">Product Name</label>
       <input type="text" id="name-input" [(ngModel)]="productInfo.productName" [ngModelOptions]="{standalone: true}" class="form-control" />
