--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
@@ -5,8 +5,11 @@
     </div>
     <div class="col-md-8">
       <h1>Catalog / Products</h1><br />
-      <app-add-edit-product (productCreated)="createOrUpdateProduct($event)" [productInfo]="currentProduct" [productData]="productData" [categoryData]="categoryData" [subcategoryData]="subcategoryData"></app-add-edit-product>
-      <app-show-all-products [productData]='productData' [productInfo]="currentProduct" (editClicked)="editClicked($event)" (newClicked)="newClicked()" (recordDeleted)="deleteClicked($event)"></app-show-all-products>
+      <app-add-edit-product (productCreated)="createOrUpdateProduct($event)" [productInfo]="currentProduct"
+                            [productData]="productData" [categoryData]="categoryData" [subcategoryData]="subcategoryData"></app-add-edit-product>
+
+      <app-show-all-products [productData]='productData' [productInfo]="currentProduct"
+                             (editClicked)="editClicked($event)" (newClicked)="newClicked()" (recordDeleted)="deleteClicked($event)"></app-show-all-products>
     </div>
     <div class="col-md-2">
       Information
