--- a/KingPim.Web/ClientApp/src/app/_pages/show-all-products/show-all-products.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/show-all-products/show-all-products.component.html
@@ -1,3 +1,4 @@
+
 <table class="table">
   <thead>
     <tr>
@@ -29,3 +30,4 @@
     </tr>
   </tbody>
 </table>
+<button type="button" class="btn btn-primary" (click)="newRecord()">New</button>
