--- a/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/add-edit-product/add-edit-product.component.html
@@ -1,32 +1,33 @@
 <div>
   <h2 *ngIf="!productInfo || productInfo.productID === undefined">Add record</h2>
-  <h2 *ngIf="productInfo && productInfo.productID !== undefined">Update record (Name: {{productInfo.productName}} )</h2>
+  <h2 *ngIf="productInfo && productInfo.productID !== undefined">Update record (Name: {{productInfo.productName}} )</h2><br />
   <form>
     <div class="form-group">
-      <input type="hidden" id="id-input" [(ngModel)]="productInfo.productID" [ngModelOptions]="{standalone: true}" class="form-control" />
+      <input type="hidden" [(ngModel)]="productInfo.productID" [ngModelOptions]="{standalone: true}" />
+      <input type="text" [(ngModel)]="productInfo.dateUpdated" [ngModelOptions]="{standalone: true}" />
     </div>
     <div class="form-group">
       <label for="name-input">Product Name</label>
       <input type="text" id="name-input" [(ngModel)]="productInfo.productName" [ngModelOptions]="{standalone: true}" class="form-control" />
     </div>
     <!--<div class="form-group">
-      <label for="category-id">Category</label><br />
-      <select>
-        <option *ngFor="let categoryInfo of categoryData " id="category-id" [(ngModel)]="productInfo.subCategory.subcategoryName" [ngModelOptions]="{standalone: true}">
-          {{ subcategoryInfo.name}}
-        </option>
+    <label for="category-id">Category</label><br />
+    <select>
+      <option *ngFor="let categoryInfo of categoryData " id="category-id" [(ngModel)]="productInfo.subCategory.subcategoryName" [ngModelOptions]="{standalone: true}">
+        {{ subcategoryInfo.name}}
+      </option>
+  </select>
+  </div>
+    <div class="form-group">
+    <label for="subcategory-id">Sub Category</label><br />
+    <select>
+      <option *ngFor="let subcategoryInfo of subcategoryData " id="subcategory-id">
+        {{ subcategoryInfo.name }}
+      </option>
     </select>
-    </div>-->
-    <!--<div class="form-group">
-      <label for="subcategory-id">Sub Category</label><br />
-      <select>
-        <option *ngFor="let subcategoryInfo of subcategoryData " id="subcategory-id">
-          {{ subcategoryInfo.name }}
-        </option>
-      </select>
-    </div>-->
-
-    <button type="button" class="btn btn-primary" (click)="addOrUpdateProductRecord($event);">{{buttonText}}</button>
-
+  </div>-->
+    <hr />
+    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="addOrUpdateProductRecord($event);">{{buttonText}}</button>
+     - <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
   </form>
 </div>
