--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
@@ -5,10 +5,9 @@
     </div>
     <div class="col-md-8">
       <h1>Catalog / Products</h1><br />
-      <app-add-edit-product (productCreated)="createOrUpdateProduct($event)" [productInfo]="currentProduct"
-                            [productData]="productData" [categoryData]="categoryData" [subcategoryData]="subcategoryData"></app-add-edit-product>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addeditmodal" (click)="newRecord()">New</button><br />
 
-      <app-show-all-products [productData]='productData' [productInfo]="currentProduct"
+      <app-show-all-products [productData]='productData' [productInfo]="currentProduct" data-toggle="modal" data-target="#addeditmodal"
                              (editClicked)="editClicked($event)" (newClicked)="newClicked()" (recordDeleted)="deleteClicked($event)"></app-show-all-products>
     </div>
     <div class="col-md-2">
@@ -16,7 +15,18 @@
     </div>
   </div>
 </div>
-
+<!-- Modal -->
+<div class="modal fade" id="addeditmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <br />
+        <app-add-edit-product (productCreated)="createOrUpdateProduct($event)" [productInfo]="currentProduct"
+                              [productData]="productData" [categoryData]="categoryData" [subcategoryData]="subcategoryData"></app-add-edit-product>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
