--- a/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -21,6 +21,11 @@
           <i class="fa fa-user"></i> Accounts
         </a>
       </li>
+      <li class="nav-item" [routerLinkActive]='["link-active"]'>
+        <a class="nav-link" [routerLink]='["/product/create"]' (click)='collapse()'>
+          <i class="fa fa-user"></i> Create Product
+        </a>
+      </li>
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item" [routerLinkActive]='["link-active"]'>
