--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div class="form-group">
-        <button (click)="updateProduct(productName.value)"
+        <button type="button" (click)="updateProduct(productName.value)"
                 [disabled]="angForm.invalid"
                 class="btn btn-primary">
           Update Product
