--- a/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,7 +23,7 @@
       </li>
       <li class="nav-item" [routerLinkActive]='["link-active"]'>
         <a class="nav-link" [routerLink]='["/product/create"]' (click)='collapse()'>
-          <i class="fa fa-user"></i> Create Product
+          <i class="fa fa-book"></i> Create Product
         </a>
       </li>
     </ul>
