--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -3,6 +3,14 @@
     <tr>
       <td>Id</td>
       <td>Name</td>
+      <td>SubCategory</td>
+      <td>DateCreated</td>
+      <td>DateUpdated</td>
+      <td>Version</td>
+      <td>EditedBy</td>
+      <td>Published</td>
+
+
       <td colspan="2">Actions</td>
     </tr>
   </thead>
@@ -12,8 +20,14 @@
     <tr *ngFor="let product of products">
       <td>{{product.productID}}</td>
       <td>{{ product.productName }}</td>
+      <td>{{ product.subCategory.subcategoryName }}</td>
+      <td>{{ product.dateCreated | date:'d/M/y, h:mm a' }}</td>
+      <td>{{ product.dateUpdated | date:'d/M/y, h:mm a' }}</td>
+      <td>{{ product.version }}</td>
+      <td>{{ product.editedBy }}</td>
+      <td>{{ product.publishedStatus }}</td>
       <td><a [routerLink]="['/product/edit', product.productID]" class="btn btn-primary">Edit</a></td>
-      <td><a (click) = "deleteProduct(product.productID)" class="btn btn-danger">Delete</a></td>
+      <td><a (click)="deleteProduct(product.productID)" class="btn btn-danger">Delete</a></td>
     </tr>
   </tbody>
 </table>
