--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-2">
     </div>
     <div class="col-md-8">
-      <h1>Catalog / Products</h1><br />
+      <h1>Edit Product</h1><br />
       <form [formGroup]="angForm" novalidate>
         <div class="form-group">
           <label class="col-md-4">Name</label>
