--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -1,33 +1,36 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <td>Id</td>
-      <td>Name</td>
-      <td>SubCategory</td>
-      <td>DateCreated</td>
-      <td>DateUpdated</td>
-      <td>Version</td>
-      <td>EditedBy</td>
-      <td>Published</td>
-
-
-      <td colspan="2">Actions</td>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Category</th>
+      <th>SubCategory</th>
+      <th>DateCreated</th>
+      <th>DateUpdated</th>
+      <th>Version</th>
+      <th>EditedBy</th>
+      <th>Published</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
-
-
   <tbody>
     <tr *ngFor="let product of products">
-      <td>{{product.productID}}</td>
+      <td>{{ product.productID }}</td>
       <td>{{ product.productName }}</td>
+      <td>{{ product.subCategory.categoryName }}</td>
       <td>{{ product.subCategory.subcategoryName }}</td>
       <td>{{ product.dateCreated | date:'d/M/y, h:mm a' }}</td>
       <td>{{ product.dateUpdated | date:'d/M/y, h:mm a' }}</td>
       <td>{{ product.version }}</td>
       <td>{{ product.editedBy }}</td>
       <td>{{ product.publishedStatus }}</td>
-      <td><a [routerLink]="['/product/edit', product.productID]" class="btn btn-primary">Edit</a></td>
-      <td><a (click)="deleteProduct(product.productID)" class="btn btn-danger">Delete</a></td>
+      <td><a [routerLink]="['/product/edit', product.productID]" class="btn btn-warning"><i class="fa fa-edit"></i></a></td>
+      <td><a (click)="deleteProduct(product.productID)" class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+
     </tr>
+    
+   
+
   </tbody>
 </table>
+
