--- a/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -13,7 +13,7 @@
       </li>
       <li class="nav-item" [routerLinkActive]='["link-active"]'>
         <a class="nav-link" [routerLink]='["/catalog"]' (click)='collapse()'>
-          <i class="fa fa-book fa-fw"></i>ProductCatalog
+          <i class="fa fa-book fa-fw"></i>Catalog
         </a>
       </li>
       <li class="nav-item" [routerLinkActive]='["link-active"]'>
