--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/categories/category-get/category-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/categories/category-get/category-get.component.html
@@ -1,6 +1,9 @@
 <ul class="list-group">
-  <li class="list-group-item list-group-item list-group-item-dark"><strong>Categories&nbsp;&nbsp;&nbsp;</strong><a href="#"><strong>+</strong></a></li>
+  <li class="list-group-item list-group-item list-group-item-dark"><strong>Categories</strong><a href="#"><strong>+</strong></a></li>
   <li class="list-group-item list-group-item-light" *ngFor="let category of categories">
-    <strong>{{category.name}}</strong><a href="#">-</a>
+    <strong>{{category.name}}</strong><a (click)="deleteCategory(category.id)">-</a>
   </li>
 </ul>
+
+
+<!--TODO PUT ADD CATEGORY AND CATEGORIES IN A SMALL MODAL-->
