--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-get/subcategory-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-get/subcategory-get.component.html
@@ -1,6 +1,6 @@
 <ul class="list-group">
   <li class="list-group-item list-group-item list-group-item-dark"><strong>SubCategories&nbsp;&nbsp;&nbsp;</strong><a href="#"><strong>+</strong></a></li>
   <li class="list-group-item list-group-item-light" *ngFor="let subcategory of subCategories">
-    <strong>{{subcategory.name}}</strong><a href="#">-</a>
+    <strong>{{subcategory.name}}</strong><a (click)="deleteSubCategory(subcategory.id)">-</a>
   </li>
 </ul>
