--- a/KingPim.Web/ClientApp/src/styles.scss
+++ b/KingPim.Web/ClientApp/src/styles.scss
@@ -3,13 +3,13 @@
 body {
   background-color: white !important;
   font-family: 'Niramit', sans-serif !important;
-  
 }
 a {
   cursor: pointer!important;
 }
 #main_container {
   margin-top: 50px;
+  margin-bottom:50%;
 }
 .fullscreenDiv {
   background-color: #e8e8e8;
@@ -75,6 +75,6 @@ a {
   min-width: 200px;
   max-width: 400px;
   padding: 40px;
- 
+
 }
 
