--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-add/subcategory-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-add/subcategory-add.component.html
@@ -1,28 +1,17 @@
 <form [formGroup]="angForm" novalidate>
-  <div class="form-group">
-    <label class="col-md-4">Name</label>
-    <input type="text" class="form-control" formControlName="subcategoryName" #subcategoryName placeholder="SubCategory..." />
-  </div>
-  <div *ngIf="angForm.controls['subcategoryName'].invalid && (angForm.controls['subcategoryName'].dirty || angForm.controls['subcategoryName'].touched)" class="alert alert-danger">
-    <div *ngIf="angForm.controls['subcategoryName'].errors.required">
-      A SubCategory name is required.
-    </div>
-  </div>
-  <div class="form-group">
-    <select formControlName="categoryId" #categoryId>
-      <option value="{{ category.id}}" *ngFor="let category of categories ">
-        {{ category.name}}
-      </option>
-    </select>
-  </div>
-  <div *ngIf="angForm.controls['categoryId'].invalid && (angForm.controls['categoryId'].dirty || angForm.controls['categoryId'].touched)" class="alert alert-danger">
-    <div *ngIf="angForm.controls['categoryId'].errors.required">
-      A Category is required
-    </div>
-  </div>
+  <mat-form-field>
+    <input matInput type="text" class="form-control" formControlName="subcategoryName" #subcategoryName placeholder="SubCategory..." />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-select placeholder="Select Category" formControlName="categoryId" #categoryId>
+      <mat-option *ngFor="let category of categories " [value]="category.id" >
+        {{category.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
   <div class="form-group">
     <!--DONT FORGET TO PUT VALUES ON CLICK FUNCTION-->
-    <button (click)="addSubCategory(subcategoryName.value, categoryId.value)"
+    <button mat-raised-button color="primary" (click)="addSubCategory(subcategoryName.value, categoryId.value); onNoClick()"
             [disabled]="angForm.pristine || angForm.invalid || loading"
             class="btn btn-primary">
       Add SubCategory
