categories and subcategories work

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
@@ -5,7 +5,7 @@
       <app-subcategory-get></app-subcategory-get><br />
     </div>
     <div class="col-md-8">
-      <h1>Products</h1><br /><button mat-raised-button [routerLink]='["/product/create"]' (click)='collapse()' >
+      <h1>Products</h1><br /><button mat-raised-button [routerLink]='["/product/create"]' >
         <i class="fa fa-plus-square"></i> Create Product
       </button><br /><br />
       <app-product-get></app-product-get>
