attributes and attributegroups done onto angular

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
@@ -11,7 +11,8 @@
       <app-product-get></app-product-get>
     </div>
     <div class="col-md-2">
-      Information
+      <app-attributegroup-get></app-attributegroup-get><br />
+      <app-attribute-get></app-attribute-get>
     </div>
   </div>
 </div>
