--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -40,7 +40,7 @@
   </ng-container>
   <ng-container matColumnDef="Category">
     <th mat-header-cell *matHeaderCellDef> Category </th>
-    <td mat-cell *matCellDef="let product">{{ product.subCategory.categoryName }}</td>
+    <td mat-cell *matCellDef="let product">{{ product.subCategory.categoryID }}</td>
   </ng-container>
   <ng-container matColumnDef="SubCategory">
     <th mat-header-cell *matHeaderCellDef> SubCategory </th>
