--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-add/subcategory-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/subcategories/subcategory-add/subcategory-add.component.html
@@ -1,6 +1,7 @@
+<h1 mat-dialog-title>Add Sub-Category</h1>
 <form [formGroup]="angForm" novalidate>
   <mat-form-field>
-    <input matInput type="text" class="form-control" formControlName="subcategoryName" #subcategoryName placeholder="SubCategory..." />
+    <input matInput type="text" class="form-control" formControlName="subcategoryName" #subcategoryName placeholder="SubCategory" />
   </mat-form-field>
   <mat-form-field>
     <mat-select placeholder="Select Category" formControlName="categoryId" #categoryId>
