continue with adding attributes to a product

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/catalog.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-md-8">
       <h1>Products</h1><br /><button mat-raised-button [routerLink]='["/product/create"]' >
-        <i class="fa fa-plus-square"></i> Create Product
+        <i class="fa fa-plus"></i> Add Product
       </button><br /><br />
       <app-product-get></app-product-get>
     </div>
