--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -1,34 +1,3 @@
-<!--<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Category</th>
-      <th>SubCategory</th>
-      <th>DateCreated</th>
-      <th>DateUpdated</th>
-      <th>Version</th>
-      <th>EditedBy</th>
-      <th>Published</th>
-      <th colspan="2">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let product of products">
-      <td>{{ product.productID }}</td>
-      <td>{{ product.productName }}</td>
-      <td>{{ product.subCategory.categoryName }}</td>
-      <td>{{ product.subCategory.subcategoryName }}</td>
-      <td>{{ product.dateCreated | date:'d/M/y, h:mm a' }}</td>
-      <td>{{ product.dateUpdated | date:'d/M/y, h:mm a' }}</td>
-      <td>{{ product.version }}</td>
-      <td>{{ product.editedBy }}</td>
-      <td>{{ product.publishedStatus }}</td>
-      <td><a [routerLink]="['/product/edit', product.productID]" class="btn btn-warning"><i class="fa fa-edit"></i></a></td>
-      <td><a (click)="deleteProduct(product.productID)" class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
-    </tr>
-  </tbody>
-</table>-->
 <table mat-table [dataSource]="products" class="mat-elevation-z8">
   <ng-container matColumnDef="Id">
     <th mat-header-cell *matHeaderCellDef> No. </th>
@@ -64,17 +33,52 @@
   </ng-container>
   <ng-container matColumnDef="Published">
     <th mat-header-cell *matHeaderCellDef> Published </th>
-    <td mat-cell *matCellDef="let product">{{ product.publishedStatus }}</td>
+    <td mat-cell *matCellDef="let product">
+      <mat-checkbox class="example-margin" [(ngModel)]="product.publishedStatus"></mat-checkbox>
+      {{ product.publishedStatus }}
+    </td>
   </ng-container>
   <ng-container matColumnDef="Edit">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let product"><button mat-raised-button color="primary" [routerLink]="['/product/edit', product.productID]"><i class="fa fa-edit"></i></button></td>
   </ng-container>
-    <ng-container matColumnDef="Delete">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let product"><button mat-raised-button color="warn" (click)="deleteProduct(product.productID)"><i class="fa fa-trash"></i></button></td>
+  <ng-container matColumnDef="Delete">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let product"><button mat-raised-button color="warn" (click)="deleteProduct(product.productID)"><i class="fa fa-trash"></i></button></td>
 
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
 </table>
+<!--<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Category</th>
+      <th>SubCategory</th>
+      <th>DateCreated</th>
+      <th>DateUpdated</th>
+      <th>Version</th>
+      <th>EditedBy</th>
+      <th>Published</th>
+      <th colspan="2">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let product of products">
+      <td>{{ product.productID }}</td>
+      <td>{{ product.productName }}</td>
+      <td>{{ product.subCategory.categoryName }}</td>
+      <td>{{ product.subCategory.subcategoryName }}</td>
+      <td>{{ product.dateCreated | date:'d/M/y, h:mm a' }}</td>
+      <td>{{ product.dateUpdated | date:'d/M/y, h:mm a' }}</td>
+      <td>{{ product.version }}</td>
+      <td>{{ product.editedBy }}</td>
+      <td>{{ product.publishedStatus }}</td>
+      <td><a [routerLink]="['/product/edit', product.productID]" class="btn btn-warning"><i class="fa fa-edit"></i></a></td>
+      <td><a (click)="deleteProduct(product.productID)" class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+    </tr>
+  </tbody>
+</table>-->
+
