--- a/KingPim.Web/ClientApp/src/styles.scss
+++ b/KingPim.Web/ClientApp/src/styles.scss
@@ -34,8 +34,8 @@ a {
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid rebeccapurple;
-  border-bottom: 16px solid rebeccapurple;
+  border-top: 16px solid lightblue;
+  border-bottom: 16px solid lightblue;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
@@ -78,10 +78,14 @@ a {
   padding: 40px;
 
 }
+custom-modalbox {
+  background-color: blue;
+}
+.formcontainer {
+  display: flex;
+  flex-direction: column;
+}
 
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.formcontainer > * {
+  width: 100%;
+}
