Refactor backend and cleaned up some angular css

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/attributes/attribute-add/attribute-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/attributes/attribute-add/attribute-add.component.html
@@ -1,3 +1,4 @@
-<p>
-  attribute-add works!
-</p>
+<p>attribute-add works! Make a form for attribute adds</p>
+<p>1. Top of page wich Attributegroup is clicked on</p>
+<p>2. Select List of avaliable attribute types</p>
+<p>3. Value(s) for the selected attributetype</p>
