--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
@@ -1,10 +1,10 @@
 <mat-list>
-  <mat-list-item><strong>Attributegroups</strong><a (click)="openDialog()"><strong>+</strong></a></mat-list-item>
+  <mat-list-item><strong>Attributegroups</strong><a (click)="openAgDialog()"><strong>+</strong></a></mat-list-item>
   <mat-divider></mat-divider>
   <mat-list-item *ngFor="let attributegroup of attributegroups">
     <span matBadge="4" matBadgeOverlap="false" matBadgeSize="small"><button mat-button [matMenuTriggerFor]="menu">{{attributegroup.name}}</button></span> <!--Should Dynamicly count how many items are in that group-->
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>Add Attributes to group {{attributegroup.name}}</button>
+      <button (click)="openAttDialog()" mat-menu-item>Add Attributes to group {{attributegroup.name}}</button>
       <button (click)="deleteAttributeGroup(attributegroup.id)" mat-menu-item>Delete AttributeGRoup</button>
     </mat-menu>
   </mat-list-item>
