--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -1,5 +1,6 @@
-
-
+<h1>Products</h1><br /><button mat-raised-button [routerLink]='["/product/create"]' >
+  <i class="fa fa-plus"></i> Add Product
+</button><br /><br />
 <table mat-table [dataSource]="productData" class="mat-elevation-z8">
   <ng-container matColumnDef="Id">
       <th mat-header-cell *matHeaderCellDef>No.</th>
