--- a/KingPim.Web/ClientApp/src/app/home/home.component.html
+++ b/KingPim.Web/ClientApp/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class='container' id="main_container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" style="margin-top:120px;">
 
         <span id="title_home">KingPim</span>&nbsp;&nbsp;&nbsp;by <a href="#" id="curse_come" style="font-style:italic;">Royalty Systems</a><br>
         <p>
