--- a/KingPim.Web/ClientApp/src/styles.scss
+++ b/KingPim.Web/ClientApp/src/styles.scss
@@ -87,13 +87,9 @@ font-style: italic;
   min-width: 200px;
   max-width: 400px;
   padding: 40px;
-  background-image: url('../src/assets/img/logo_king.png');
-  background-repeat: no-repeat;
-  background-position: center;
-
 }
 custom-modalbox {
-  background-color: blue;
+  background-color: navajowhite;
 }
 .formcontainer {
   display: flex;
