--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/attributes/attribute-add/attribute-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/attributes/attribute-add/attribute-add.component.html
@@ -2,3 +2,16 @@
 <p>1. Top of page wich Attributegroup is clicked on</p>
 <p>2. Select List of avaliable attribute types</p>
 <p>3. Value(s) for the selected attributetype</p>
+<ul>
+    <li *ngFor="let ag of attributegroup">
+{{ag.name}}
+    </li>
+</ul>
+
+
+<!-- <ul>
+    <li *ngFor="let att of attributes">
+        {{att.}}
+    </li>
+    
+</ul> -->
